packages/learn-typescript/deployments/learn-typescript-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: learntsc-app-deployment
  name: learntsc-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learntsc-app-deployment
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: learntsc-app-deployment
    spec:
      containers:
        - name: learntsc-app-deployment
          image: ajayedap/playground:learn-mui-adminboard
          #We don't need env here, but just keeping it.
          imagePullPolicy: Always
      imagePullSecrets:
        - name: dockercreds
