packages/learn-typescript/deployments/learn-typescript-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: learntsc-app-deployment
  name: learntsc-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learntsc-app-deployment
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: learntsc-app-deployment
    spec:
      containers:
        - name: learntsc-app-deployment
          image: ajayedap/playground:learn-typescript
          args:
            - 'node'
            - 'build/mui-admin-backend/server.js'
          #We don't need env here, but just keeping it.
          imagePullPolicy: Always
      imagePullSecrets:
        - name: dockercreds
---
kind: Service
apiVersion: v1
metadata:
  name: learntsc-app-service
  labels:
    app: learntsc-app-service
spec:
  type: ClusterIP
  selector:
    app: learntsc-app-deployment
  ports:
    - port: 3000
      targetPort: 3000
