packages/learn-typescript/deployments/learn-typescript-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: 'public'
    #____________Enable CORS__________________
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'PUT, GET, POST, OPTIONS'
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #____________Enable CORS__________________
spec:
  tls:
    - hosts:
        - alantursystems.com
      secretName: alantursystems-ingress-tls
  rules:
    - host: alantursystems.com
      http:
        paths:
          - path: /omniapp(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: learntsc-app-service
                port:
                  number: 3000
